--- a/Atelier3.ipynb
+++ b/Atelier3.ipynb
@@ -219,18 +219,43 @@
     "N = int(input(\"Saisir la limite:\"))\n",
     "x = int(input(\"Saisir x:\"))\n",
     "a=0\n",
-    "for i in range(1,N+1):\n",
+    "for i in range(0,N+1):\n",
     "    a+=x**i\n",
     "print(a)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9f258016",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Ex08"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dfb7ae09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pi^2/6 =  1.64493306684777 et Pi/2 = 999999.4999980602\n"
+     ]
+    }
+   ],
+   "source": [
+    "Pi1=0\n",
+    "Pi2=0\n",
+    "\n",
+    "for N in range(1,1000000):\n",
+    "    Pi1+=1/N**2\n",
+    "    Pi2+=4*N**2/(4*N**2-1)\n",
+    "\n",
+    "print(\"Pi^2/6 = \",Pi1,\"et Pi/2 =\",Pi2)"
+   ]
   }
  ],
  "metadata": {
