--- a/Atelier6.ipynb
+++ b/Atelier6.ipynb
@@ -185,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient est 0/4 = 0.0\n"
+      "coefficient est 1/3 = 0.3333333333333333\n"
      ]
     }
    ],
